syntax = "proto3";

option csharp_namespace = "GRPC2";

package GRPC2;

service GRPC2Service {
  rpc SendMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string message = 1;
}

message MessageReply {
  string message = 1;
}
