syntax = "proto3";

option csharp_namespace = "GRPC1";

package GRPC1;

service GRPC1Service {
  rpc SendMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string message = 1;
}

message MessageReply {
  string message = 1;
}
